Stop scrollbar appearing on IE8

--- a/style.css
+++ b/style.css
@@ -218,8 +218,7 @@ td.bottom{
 
 #logo {
         margin-top: 20px;
-        margin-bottom: 20px;
-	clear: both;
+        padding-bottom: 20px;
         display: block;
         overflow: auto;
 }
